--- a/carbonFootprint.html
+++ b/carbonFootprint.html
@@ -22,7 +22,7 @@
       <!-- sign up/log in button-->
       <div class="login-signup-container">
         <a href="login.html">Log in</a>
-        <button>Sign up</button>
+        <button><a href="register.html"></a>Sign up</button>
       </div>
     </header>
     <!--Navigation bar-->
