--- a/index.html
+++ b/index.html
@@ -9,21 +9,22 @@
         integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css"> <!--css for generally-->
     <link rel="stylesheet" href="css/dashboard.css"> <!--css for dashboard-->
-    <!--amadbnjakhgbdfhaegdfja-->
+
 </head>
 
+<!-- boostrap 5 js -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <body>
     <div class="wrapper">
         <header class="main-header">
             <img src="assets/logo/Logo ETP.png" alt="Eco Travel Planner Logo" class="logo" />
             <h1 class="app-title">Eco Travel Planner</h1>
 
-            <!-- sign up/log in button-->
+             <!-- sign up/log in button-->
             <div class="login-signup-container">
                 <a href="login.html">Log in</a>
-                <button>Sign up</button>
+                <button><a href="register.html"></a>Sign up</button>
             </div>
-
         </header>
 
         <!--Navigation bar-->
@@ -36,20 +37,94 @@
         <!-- Main Side Bar -->
         <div class="mainHamburger" onclick="toggleSidebar()">☰</div>
         <div class="mainsidebar" id="mainsidebar">
-            <a href="profileManagement.html"><img src="icons/accountIcon.png" alt="Profile" class="icon"> Profile</a>
-            <a href="index.html"><img src="icons/homeIcon.png" alt="Home" class="icon"> Home</a>
-            <a href="travelPlanner.html"><img src="icons/travelIcon.png" alt="Travel Planner" class="icon"> Travel
-                Planner</a>
-            <a href="weatherModule.html"><img src="icons/sunWeatherIcon.png" alt="Weather" class="icon"> Weather</a>
-            <a href="carbonFootprint.html"><img src="icons/calculatorIcon.png" alt="Calculator" class="icon">
-                Calculator</a>
-            <a href="login.html" onclick="return confirmLogout()"><img src="icons/logout.png" alt="Logout"
-                    class="icon">Logout</a>
+        <a href="profileManagement.html"><img src="icons/accountIcon.png" alt="Profile" class="icon">  Profile</a>
+        <a href="index.html"><img src="icons/homeIcon.png" alt="Home" class="icon"> Home</a>
+        <a href="travelPlanner.html"><img src="icons/travelIcon.png" alt="Travel Planner" class="icon"> Travel Planner</a>
+        <a href="weatherModule.html"><img src="icons/sunWeatherIcon.png" alt="Weather" class="icon"> Weather</a>
+        <a href="carbonFootprint.html"><img src="icons/calculatorIcon.png" alt="Calculator" class="icon"> Calculator</a>
+        <a href="login.html" onclick="return confirmLogout()"><img src="icons/logout.png" alt="Logout"class="icon">Logout</a>
         </div>
 
-        <p></p>
-
         <main class="content">
+
+            <!-- Image Carousell-->
+            <div class="news-container">
+            <div class="news-row">
+                <!-- Text (Left) -->
+                <div style="width: 40%; padding: 20px; text-align: left;">
+                <h1 style="font-size: 60px; color:rgb(65, 64, 64);">DISCOVER<br>NEW<br>PLACES<span style= "color:rgb(34, 33, 33);">!</span></h1>
+                <p style="text-align: left; font-size: 30px;">Get your discounted vacation<br>before promotion ends !!</p>
+                <a href="travelPlanner.html" class="getNowButton">Get Now</a>
+                </div>
+
+                <!-- Image Carousel (Right) -->
+                <div class="col-md-7">
+                <div id="sceneryCarousel" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-inner rounded-4">
+                    <div class="carousel-item active">
+                        <img src="assets/images/scenery1.jpg" class="d-block w-100" alt="Scenery 1">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="assets/images/scenery2.jpeg" class="d-block w-100" alt="Scenery 2">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="assets/images/scenery3.avif" class="d-block w-100" alt="Scenery 3">
+                    </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#sceneryCarousel" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#sceneryCarousel" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
+                </div>
+            </div>
+            </div>
+
+            <!-- App Benefits-->
+            <h2 style="text-align: center;"><strong>Why Eco Travel Planner is better?</strong></h2>
+    
+            <div class="container">
+                 <div class="feature-section">
+                    <div class="feature-card">
+                        <img src="assets/images/feature1.jpg" alt="Feature 1">
+                        <h3>Organise your journey</h3>
+                        <p>With us, your trip will be planned from A to Z without any loopholes!</p>
+                    </div>
+                    <div class="feature-card">
+                        <img src="assets/images/feature1.jpg" alt="Feature 2">
+                        <h3>Organise your journey</h3>
+                        <p>With us, your trip will be planned from A to Z without any loopholes!</p>
+                    </div>
+                    <div class="feature-card">
+                        <img src="assets/images/feature1.jpg" alt="Feature 3">
+                        <h3>Organise your journey</h3>
+                        <p>With us, your trip will be planned from A to Z without any loopholes!</p>
+                    </div>
+                    <div class="feature-card">
+                        <img src="assets/images/feature1.jpg" alt="Feature 4">
+                        <h3>Organise your journey</h3>
+                        <p>With us, your trip will be planned from A to Z without any loopholes!</p>
+                    </div>
+                    <div class="feature-card">
+                        <img src="assets/images/feature1.jpg" alt="Feature 5">
+                        <h3>Organise your journey</h3>
+                        <p>With us, your trip will be planned from A to Z without any loopholes!</p>
+                    </div>
+                    <div class="feature-card">
+                        <img src="assets/images/feature1.jpg" alt="Feature 6">
+                        <h3>Organise your journey</h3>
+                        <p>With us, your trip will be planned from A to Z without any loopholes!</p>
+                    </div>
+            
+                </div>
+
+
+            </div>
+
             <!--Welcome section-->
             <div class="container">
                 <div class="row ">
@@ -110,52 +185,6 @@
             </div>
 
 
-            <!--Latest news-->
-            <div id=news-container class="container">
-                <div id="carouselExampleCaptions" class="carousel slide">
-                    <div class="carousel-indicators">
-                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0"
-                            class="active" aria-current="true" aria-label="Slide 1"></button>
-                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
-                            aria-label="Slide 2"></button>
-                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
-                            aria-label="Slide 3"></button>
-                    </div>
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <img src="assets/logo/Logo ETP.png" class="d-block w-100" alt="...">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h5>First slide label</h5>
-                                <p>Some representative placeholder content for the first slide.</p>
-                            </div>
-                        </div>
-                        <div class="carousel-item">
-                            <img src="assets/logo/Logo ETP.png" class="d-block w-100" alt="...">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h5>Second slide label</h5>
-                                <p>Some representative placeholder content for the second slide.</p>
-                            </div>
-                        </div>
-                        <div class="carousel-item">
-                            <img src="assets/logo/Logo ETP.png" class="d-block w-100" alt="...">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h5>Third slide label</h5>
-                                <p>Some representative placeholder content for the third slide.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
-                        data-bs-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Previous</span>
-                    </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
-                        data-bs-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Next</span>
-                    </button>
-                </div>
-            </div>
         </main>
 
         <!--Footer for copywrite-->
